--- a/src/main/resources/static/css/admin/admin_login.css
+++ b/src/main/resources/static/css/admin/admin_login.css
@@ -1,9 +1,15 @@
+#container {
+    margin: 0px auto;
+    width: 1400px;
+}
+
 .main-container {
     padding-left: 480px;
     padding-top: 180px;
 }
 
 .login-container {
+    border: 1px solid gray;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,7 +20,6 @@
     height: 400px;
 
     background-color: rgb(255, 255, 255);
-    box-shadow: 0px 0px 5px 1px rgb(104, 103, 98);
 
     border-radius: 2%;
 }
@@ -49,6 +54,7 @@
 }
 
 .button-group {
+    
     display: flex;
     flex-direction: column;
 
@@ -59,6 +65,7 @@
 }
 
 .button-group button {
+    border: 1px solid rgb(90, 90, 90);
     margin-bottom: 10px;
     width: 100%;
     font-weight: 600;
