--- a/src/main/resources/static/css/admin/left_aside.css
+++ b/src/main/resources/static/css/admin/left_aside.css
@@ -1,26 +1,31 @@
-.left-aside {
-    width: 200px;
-    height: 800px;
-
+.main-container {
+    padding: 0%;
 }
 
-.aside-title {
+.left-aside {
+    padding-top: 150px;
+    width: 150px;
+    position: fixed;
+}
+
+.aside-title { 
     display: flex;
     justify-content: center;
     align-items: center;
 
     width: 100%;
-    height: 100px;
-
-    background-color: rgb(244, 219, 219);
+    height: 20%;
 }
 
-.title-text-h1 {
-    font-size: 24px;
-    color: #202020;
+.hotsix {
+    padding-bottom: 15px;
+    font-size: 30px;
+    color: #ba7373;
 }
 
 .main-menu {
+    border: 1px solid rgb(189, 100, 115);
+
     background-color: #ffbcbc;
     color: white;
 }
@@ -30,24 +35,37 @@
     align-items: center;
     justify-content: center;
 
-    border-top: 1px solid #bea9a9;
-    border-bottom: 1px solid #bea9a9;
+    border-top: 1px solid rgb(189, 100, 115);
+    border-bottom: 1px solid rgb(189, 100, 115);
 
-    height: 80px;
-    font-size: 18px;
+    height: 90px;
+    font-size: 25px;
 }
 
-.sub-menu a li {
+.sub-menu li {
     display: flex;
     justify-content: center;
-    align-items: center;
+    
+    padding-top: 20px;
+    padding-bottom: 20px;
+    
+    width: 150px;
+    height: 35px;
 
-    height: 50px;
+    font-size: 30px;
+    color: white;
+}
 
-    font-size: 14px;
+.sub-menu2 li {
+    display: flex;
+
+    width: 150px;
+    height: 40px;
+
+    font-size: 30px;
     color: white;
 }
 
 .sub-menu a li:hover {
-    background-color: #505050;
+    background-color: #f98585;
 }
