--- a/src/main/resources/templates/admin/menu_registration.html
+++ b/src/main/resources/templates/admin/menu_registration.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>관리자 로그인</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="/static/css/admin/admin_common.css">
-    <link rel="stylesheet" href="/static/css/admin/admin_login.css">
     <link rel="stylesheet" href="/static/css/admin/left_aside.css">
+    <link rel="stylesheet" href="/static/css/admin/reset.css">
 </head>
 <body>
 <div id="container">
     <header class="header-container">
-        <h1 class="admin-logo"><a href="">홈</a></h1>
-        <h1 class="store">가게이름</h1>
+        <h1 class="admin-logo"><a href=""><i class="fa-solid fa-utensils"></i></a></h1>
+        <h1 class="store">HotSix</h1>
         <ul class="menu-login">
             <li><a href="/templates/admin/admin_login.html">로그인</a></li>
         </ul>
