--- a/src/main/resources/templates/admin/reservation_management.html
+++ b/src/main/resources/templates/admin/reservation_management.html
@@ -32,12 +32,12 @@
             <nav class="main-menu">
                 <h2 class="menu-menu">☆예약관리☆</h2>
                 <ul class="sub-menu">
-                    <a href=""><li>예약정보 조회</li></a>
+                    <a href="/templates/admin/reservation_management.html"><li>예약정보 조회</li></a>
                 </ul>
                 <h2 class="menu-menu">☆MENU☆</h2>
                 <ul class="sub-menu">
-                    <a href=""><li>메뉴 관리</li></a>
-                    <a href=""><li>메뉴 등록</li></a>
+                    <a href="/templates/admin/menu_management.html"><li>메뉴 관리</li></a>
+                    <a href="/templates/admin/menu_registration.html"><li>메뉴 등록</li></a>
                 </ul>
             </nav>
         </aside>
@@ -60,100 +60,100 @@
                             <th>요청사항</th>
                         </tr>
                         <tr>
-                            <th>순번</th>
-                            <th>예약날짜</th>
-                            <th>예약시간</th>
-                            <th>이름</th>
-                            <th>인원수</th>
-                            <th>소인</th>
-                            <th>대인</th>
-                            <th>연락처</th>
-                            <th>이메일</th>
-                            <th>요청사항</th>
+                            <td>순번</td>
+                            <td>예약날짜</td>
+                            <td>예약시간</td>
+                            <td>이름</td>
+                            <td>인원수</td>
+                            <td>소인</td>
+                            <td>대인</td>
+                            <td>연락처</td>
+                            <td>이메일</td>
+                            <td>요청사항</td>
                         </tr>
                         <tr>
-                            <th>순번</th>
-                            <th>예약날짜</th>
-                            <th>예약시간</th>
-                            <th>이름</th>
-                            <th>인원수</th>
-                            <th>소인</th>
-                            <th>대인</th>
-                            <th>연락처</th>
-                            <th>이메일</th>
-                            <th>요청사항</th>
+                            <td>순번</td>
+                            <td>예약날짜</td>
+                            <td>예약시간</td>
+                            <td>이름</td>
+                            <td>인원수</td>
+                            <td>소인</td>
+                            <td>대인</td>
+                            <td>연락처</td>
+                            <td>이메일</td>
+                            <td>요청사항</td>
                         </tr>
                         <tr>
-                            <th>순번</th>
-                            <th>예약날짜</th>
-                            <th>예약시간</th>
-                            <th>이름</th>
-                            <th>인원수</th>
-                            <th>소인</th>
-                            <th>대인</th>
-                            <th>연락처</th>
-                            <th>이메일</th>
-                            <th>요청사항</th>
+                            <td>순번</td>
+                            <td>예약날짜</td>
+                            <td>예약시간</td>
+                            <td>이름</td>
+                            <td>인원수</td>
+                            <td>소인</td>
+                            <td>대인</td>
+                            <td>연락처</td>
+                            <td>이메일</td>
+                            <td>요청사항</td>
                         </tr>
                         <tr>
-                            <th>순번</th>
-                            <th>예약날짜</th>
-                            <th>예약시간</th>
-                            <th>이름</th>
-                            <th>인원수</th>
-                            <th>소인</th>
-                            <th>대인</th>
-                            <th>연락처</th>
-                            <th>이메일</th>
-                            <th>요청사항</th>
+                            <td>순번</td>
+                            <td>예약날짜</td>
+                            <td>예약시간</td>
+                            <td>이름</td>
+                            <td>인원수</td>
+                            <td>소인</td>
+                            <td>대인</td>
+                            <td>연락처</td>
+                            <td>이메일</td>
+                            <td>요청사항</td>
                         </tr>
                         <tr>
-                            <th>순번</th>
-                            <th>예약날짜</th>
-                            <th>예약시간</th>
-                            <th>이름</th>
-                            <th>인원수</th>
-                            <th>소인</th>
-                            <th>대인</th>
-                            <th>연락처</th>
-                            <th>이메일</th>
-                            <th>요청사항</th>
+                            <td>순번</td>
+                            <td>예약날짜</td>
+                            <td>예약시간</td>
+                            <td>이름</td>
+                            <td>인원수</td>
+                            <td>소인</td>
+                            <td>대인</td>
+                            <td>연락처</td>
+                            <td>이메일</td>
+                            <td>요청사항</td>
                         </tr>
                         <tr>
-                            <th>순번</th>
-                            <th>예약날짜</th>
-                            <th>예약시간</th>
-                            <th>이름</th>
-                            <th>인원수</th>
-                            <th>소인</th>
-                            <th>대인</th>
-                            <th>연락처</th>
-                            <th>이메일</th>
-                            <th>요청사항</th>
+                            <td>순번</td>
+                            <td>예약날짜</td>
+                            <td>예약시간</td>
+                            <td>이름</td>
+                            <td>인원수</td>
+                            <td>소인</td>
+                            <td>대인</td>
+                            <td>연락처</td>
+                            <td>이메일</td>
+                            <td>요청사항</td>
                         </tr>
                         <tr>
-                            <th>순번</th>
-                            <th>예약날짜</th>
-                            <th>예약시간</th>
-                            <th>이름</th>
-                            <th>인원수</th>
-                            <th>소인</th>
-                            <th>대인</th>
-                            <th>연락처</th>
-                            <th>이메일</th>
-                            <th>요청사항</th>
+                            <td>순번</td>
+                            <td>예약날짜</td>
+                            <td>예약시간</td>
+                            <td>이름</td>
+                            <td>인원수</td>
+                            <td>소인</td>
+                            <td>대인</td>
+                            <td>연락처</td>
+                            <td>이메일</td>
+                            <td>요청사항</td>
                         </tr>
                         <tr>
-                            <th>순번</th>
-                            <th>예약날짜</th>
-                            <th>예약시간</th>
-                            <th>이름</th>
-                            <th>인원수</th>
-                            <th>소인</th>
-                            <th>대인</th>
-                            <th>연락처</th>
-                            <th>이메일</th>
-                            <th>요청사항</th>
+                            <td>순번</td>
+                            <td>예약날짜</td>
+                            <td>예약시간</td>
+                            <td>이름</td>
+                            <td>인원수</td>
+                            <td>소인</td>
+                            <td>대인</td>
+                            <td>연락처</td>
+                            <td>이메일</td>
+                            <td>요청사항</td>
                         </tr>
                     </thead>
                 </table>
