--- a/src/main/resources/static/css/admin/admin_common.css
+++ b/src/main/resources/static/css/admin/admin_common.css
@@ -47,6 +47,7 @@ button:not(:disabled):hover {
 }
 
 .admin-logo a {
+    padding-left: 100px;
     font-size: 55px;
     font-weight: 1000;
     color: rgb(83, 83, 83);
@@ -68,8 +69,8 @@ a {
 }
 
 .menu-login li a {
-    padding-right: 20px;
+    padding-right: 120px;
     font-size: 35px;
     font-weight: 600;
-    color: white;
+    color: rgb(73, 73, 73);
 }
