--- a/src/main/resources/static/css/admin/reservation.css
+++ b/src/main/resources/static/css/admin/reservation.css
@@ -1,17 +1,34 @@
 .content-container {
-    height: 80%;
-    padding-left: 20%;
+    padding-top: 102px;
+    padding-left: 13%;
+
+    width: 1800px;
+    
+}
+
+.content-title {
+    font-size: 35px;
 }
 
 .table-container {
-    width: 80%;
-    height: 450px;
+    padding-top: 20px;
 }
 
 .reservation-table {
     background-color: white;
     /* border: 1px solid #202020; */
     width: 100%;
+    height: 530px;
+}
+
+.reservation-table th {
+    background-color: #ffeeee;
+    border: 1px solid #3e2929
+}
+
+.reservation-table td {
+    border: 1px solid #3e2929
+
 }
 
 .reservation-table th, .reservation-table td {
@@ -22,7 +39,8 @@
 .page-controller {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 50px;
+    margin-right: 30px;
 }
 
 .page-numbers {
@@ -32,6 +50,7 @@
 .page-controller a {
     display: flex;
     justify-content: center;
+    align-content: center;
     align-items: center;
 
     background-color: #ff9696;
