--- a/src/main/resources/templates/admin/menu_management.html
+++ b/src/main/resources/templates/admin/menu_management.html
@@ -56,15 +56,82 @@
                         <div class="menu-info">
                             <div class="menu-code">메뉴-001</div>
                             <h3 class="menu-name">맛있는 고기 냠냠</h2>
-                            <div class="info-text menu-price"><b>&nbsp;&nbsp;&nbsp;&nbsp; 가격 &nbsp;</b></div>
-                            <div class="info-text menu-age1"><b>대인: </b>90,000</div>
-                            <div class="info-text menu-age2"><b>소인: </b>50,000</div>
-                            <div class="info-text sales-pride"><b>판매기간: </b>상시/한정</div>
+                            <div class="info-text1">
+                                <div class="info-text menu-age1"><b>-대인: </b>90,000</div>
+                                <div class="info-text menu-age2"><b>-소인: </b>50,000</div>
+                            </div>
+                            <div class="info-text2">
+                                <div class="info-text sales-pride"><b>판매기간: </b>상시/한정</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-flex">
+                <div class="info-container">
+                    <div class="menu-desc">
+                        <div class="img-container">
+                            <img src="/static/images/gogi2.jpg" class="menu-img">
+                        </div> 
+                        <div class="menu-info">
+                            <div class="menu-code">메뉴-002</div>
+                            <h3 class="menu-name">맛있는 고기 뇸뇸</h2>
+                            <div class="info-text1">
+                                <div class="info-text menu-age1"><b>-대인: </b>100,000</div>
+                                <div class="info-text menu-age2"><b>-소인: </b>70,000</div>
+                            </div>
+                            <div class="info-text2">
+                                <div class="info-text sales-pride"><b>판매기간: </b>상시/한정</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-flex">
+                <div class="info-container">
+                    <div class="menu-desc">
+                        <div class="img-container">
+                            <img src="/static/images/gogi3.jfif" class="menu-img">
+                        </div> 
+                        <div class="menu-info">
+                            <div class="menu-code">메뉴-001</div>
+                            <h3 class="menu-name">맛있는 고기 앙앙</h2>
+                            <div class="info-text1">
+                                <div class="info-text menu-age1"><b>-대인: </b>90,000</div>
+                                <div class="info-text menu-age2"><b>-소인: </b>50,000</div>
+                            </div>
+                            <div class="info-text2">
+                                <div class="info-text sales-pride"><b>판매기간: </b>상시/한정</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-flex">
+                <div class="info-container">
+                    <div class="menu-desc">
+                        <div class="img-container">
+                            <img src="/static/images/gogi4.jfif" class="menu-img">
+                        </div> 
+                        <div class="menu-info">
+                            <div class="menu-code">메뉴-001</div>
+                            <h3 class="menu-name">맛있는 고기 옹옹</h2>
+                            <div class="info-text1">
+                                <div class="info-text menu-age1"><b>-대인: </b>90,000</div>
+                                <div class="info-text menu-age2"><b>-소인: </b>50,000</div>
+                            </div>
+                            <div class="info-text2">
+                                <div class="info-text sales-pride"><b>판매기간: </b>상시/한정</div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </main>
 </div>
 </body>
