--- a/src/main/resources/static/css/admin/menu_magement.css
+++ b/src/main/resources/static/css/admin/menu_magement.css
@@ -7,6 +7,7 @@
     padding-left: 500px;
     width: 1500px;
     height: 100%;
+
 }
 
 .page-title{
@@ -21,7 +22,8 @@
 
 .content-container {
     display: flex;
-    flex-direction: column;
+    
+    flex-wrap: wrap;
 
     border-radius: 10px;
     padding: 30px;
@@ -39,8 +41,7 @@
 
 .content-flex {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    width: 49%;
 }
 
 .info-container {
@@ -49,18 +50,21 @@
     align-items: center;
 
     margin-bottom: 15px;
+    margin-left: 30px;
     
-    border: 1px solid #dbdbdb;
+    border: 1px solid #4e2f3a;
     border-radius: 15px;
-    padding: 15px;
+    padding: 10px 10px 10px 0px;
 
-    width: 49%;
+    width: 700px;
+
 }
 
 .menu-desc {
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .img-container {
@@ -82,8 +86,8 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    padding: 20px 30px;
-    width: 60%;
+
+    margin-left: 20px;
 }
 
 .menu-code {
@@ -91,28 +95,38 @@
     justify-content: center;
     align-items: center;
 
-    border-radius: 4px;
-    padding: 3px;
-    width: 70px;
+    padding: 3px 0px 3px 0px;
 
-    background-color: #6a3e00;
+
+    border-radius: 4px;
+    width: 80px;
+
+    background-color: #ffb6d1;
     color: white;
-    font-weight: 600;
+    font-size: 20px;
 }
 
 .menu-name {
-    margin-top: 20px;
-    margin-bottom: 40px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-left: 100px;
 
-    font-size: 25px;
+    font-size: 35px;
 }
 
 .info-text {
-    margin: 5px 0px;
-    font-size: 16px;
-    
+    font-size: 25px;
 }
 
+.info-text1{
+    padding-left: 125px;
+}
+
+.info-text2{
+    padding-left: 105px;
+}
+
+
 .info-text b {
-    font-size: 16px;
+    font-size: 25px;
 }
