--- a/src/main/resources/templates/admin/menu_registration.html
+++ b/src/main/resources/templates/admin/menu_registration.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>예약 관리 페이지</title>
+        <title>메뉴 등록 페이지</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">    
         <link rel="stylesheet" href="/static/css/admin/admin_common.css">
         <link rel="stylesheet" href="/static/css/admin/left_aside.css">
-        <link rel="stylesheet" href="/static/css/admin/reservation.css">
+        <link rel="stylesheet" href="/static/css/admin/menu_registration.css">
         <link rel="stylesheet" href="/static/css/admin/reset.css">
     </head>
 <body>
@@ -24,25 +24,76 @@
         </ul>
     </header>
 
+    <aside class="left-aside">
+        <div class="aside-title">
+            <h1 class="hotsix">HotSix</h1>
+        </div>
+        <nav class="main-menu">
+            <h2 class="menu-menu">☆예약관리☆</h2>
+            <ul class="sub-menu">
+                <a href="/templates/admin/reservation_management.html"><li>예약정보 조회</li></a>
+            </ul>
+            <h2 class="menu-menu">☆MENU☆</h2>
+            <ul class="sub-menu">
+                <a href="/templates/admin/menu_management.html"><li>메뉴 관리</li></a>
+                <a href="/templates/admin/menu_registration.html"><li>메뉴 등록</li></a>
+            </ul>
+        </nav>
+    </aside>
+
     <main class="main-container">
-        <aside class="left-aside">
-            <div class="aside-title">
-                <h1 class="title-text-h1">HotSix</h1>
+        <div class="page-title">
+            <h1 class="main-title">☆메뉴 등록☆</h1>
+        </div>
+
+        <div class="content-container">
+            <div class="content-main">
+                <div class="content-left">
+                    <div class="item-group">
+                        <label class="register-label">메뉴 코드</label>
+                        <input type="text" class="register-input">
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="item-group">
+                        <label class="register-label">메뉴이름: </label>
+                        <input type="text" class="register-input">
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="item-group">
+                        <label class="register-label">대인: </label>
+                        <input type="text" class="register-input">
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="item-group">
+                        <label class="register-label">소인: </label>
+                        <input type="text" class="register-input">
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="item-group">
+                        <label class="register-label">분류</label>
+                        <select class="register-input category-select">
+                            <option value="all">상시</option>
+                            <option value="minute">한정</option>
+                        </select>
+                        <div class="error-message"></div>
+                    </div>
+                    <button class="register-button">등록하기</button>
+                </div>
+                <div class="content-right">
+                    <form class="img-form">
+                        <input type="file" name="file" class="img-file">
+                        <button type="button"class="img-add-button" disabled>+</button>
+                        <div class="img-container">
+                            <img src="/static/images/no_img.png" class="menu-img">
+                        </div>
+                        <div class="button-group">
+                            <button type="button" class="img-register-button" disabled>이미지 등록</button>
+                            <button type="button" class="img-cancel-button" disabled>취소</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <nav class="main-menu">
-                <h2 class="menu-menu">☆예약관리☆</h2>
-                <ul class="sub-menu">
-                    <a href=""><li>예약정보 조회</li></a>
-                </ul>
-                <h2 class="menu-menu">☆MENU☆</h2>
-                <ul class="sub-menu">
-                    <a href=""><li>메뉴 관리</li></a>
-                    <a href=""><li>메뉴 등록</li></a>
-                </ul>
-            </nav>
-        </aside>  
-    
+        </div>
     </main>
-</div>
 </body>
 </html>
