left_aside 수정. 디자인 최종 완료

--- a/src/main/resources/static/css/admin/left_aside.css
+++ b/src/main/resources/static/css/admin/left_aside.css
@@ -19,7 +19,11 @@
 
 .hotsix {
     padding-bottom: 20px;
+
     font-size: 45px;
+
+    letter-spacing: 5px;
+    text-shadow: 1px 1px 1px red;
     color: #ba7373;
 }
 
