--- a/src/main/resources/templates/admin/menu_management.html
+++ b/src/main/resources/templates/admin/menu_management.html
@@ -17,7 +17,7 @@
 <body>
 <div id="container">
     <header class="header-container">
-        <h1 class="admin-logo"><a href=""><i class="fa-solid fa-utensils"></i></a></h1>
+        <h1 class="admin-logo"><a href="/templates/admin/admin_home.html"><i class="fa-solid fa-utensils"></i></a></h1>
         <h1 class="store">HotSix</h1>
         <ul class="menu-login">
             <li><a href="/templates/admin/admin_login.html">로그인</a></li>
